--- a/src/index.css
+++ b/src/index.css
@@ -65,3 +65,11 @@ nav a:active {
 #about a {
   display: block;
 }
+#links{
+  align-items: center;
+  justify-content: center;
+  display:flex;
+  flex-direction: column;
+  padding-bottom: 20vh;
+}
+
